name:                andb
version:             0.1.0.0
synopsis:            Searchable database for names
description:         Please see README.md
homepage:            http://github.com/hmrm/CASite
license:             BSD3
license-file:        LICENSE
author:              Haney Maxwell
maintainer:          hmrmaxwell+casite@gmail.com.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config, DBAccess
  build-depends:       base >= 4.7 && < 5
                     , postgresql-simple
                     , servant
                     , aeson
                     , unix
                     , bytestring
  default-language:    Haskell2010

executable andb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , andb
  default-language:    Haskell2010

test-suite andb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , andb
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hmrm/CASite
